--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -3,3 +3,6 @@ public net.minecraft.client.renderer.WorldRenderer field_175012_t # skyVBO
 public net.minecraft.client.renderer.WorldRenderer field_175014_r # skyVertexFormat
 public net.minecraft.client.renderer.WorldRenderer field_175013_s # starVBO
 public net.minecraft.client.renderer.WorldRenderer field_175011_u # sky2VBO
+public-f net.minecraft.world.gen.feature.structure.Structure field_236384_t_ #LAND_TRANSFORMING_STRUCTURES
+public-f net.minecraft.world.gen.feature.structure.Structure field_236385_u_ #LAND_TRANSFORMING_STRUCTURES
+public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236191_b_ #DEFAULT_STRUCTURE_CONFIGS
