--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -10,3 +10,4 @@ public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_2361
 public-f net.minecraft.world.gen.feature.structure.Structure field_236384_t_ #LAND_TRANSFORMING_STRUCTURES
 public-f net.minecraft.world.gen.feature.structure.Structure field_236385_u_ #LAND_TRANSFORMING_STRUCTURES
 public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236191_b_ #DEFAULT_STRUCTURE_CONFIGS
+public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236193_d_ #DEFAULT_STRUCTURE_CONFIGS
