--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -31,6 +31,7 @@ Fly to Other Planets!
 [[dependencies.boss_tools]]
     modId="obfuscate"
     mandatory=false
+    versionRange="[0,)"
     ordering="NONE"
     side="BOTH"
 
