--- a/.classpath
+++ b/.classpath
@@ -30,7 +30,12 @@
 	</classpathentry>
 	<classpathentry kind="output" path="bin/default"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8/"/>
-	<classpathentry sourcepath="C:/Users/Elias/.mcreator/gradle/caches/forge_gradle/minecraft_user_repo/net/minecraftforge/forge/1.16.5-36.1.0_mapped_snapshot_20201028-1.16.3/forge-1.16.5-36.1.0_mapped_snapshot_20201028-1.16.3-sources.jar" kind="lib" path="C:/Users/Elias/.mcreator/gradle/caches/forge_gradle/minecraft_user_repo/net/minecraftforge/forge/1.16.5-36.1.0_mapped_snapshot_20201028-1.16.3/forge-1.16.5-36.1.0_mapped_snapshot_20201028-1.16.3.jar">
+	<classpathentry kind="lib" path="C:/Users/Elias/.mcreator/gradle/caches/forge_gradle/deobf_dependencies/curse/maven/obfuscate-289380/3067472_mapped_snapshot_20201028-1.16.3/obfuscate-289380-3067472_mapped_snapshot_20201028-1.16.3.jar">
+		<attributes>
+			<attribute name="gradle_used_by_scope" value="main,test"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry sourcepath="C:/Users/Elias/.mcreator/gradle/caches/forge_gradle/minecraft_user_repo/net/minecraftforge/forge/1.16.5-36.1.0_mapped_snapshot_20201028-1.16.3/forge-1.16.5-36.1.0_mapped_snapshot_20201028-1.16.3-sources.jar" kind="lib" path="C:/Users/Elias/.mcreator/gradle/caches/forge_gradle/minecraft_user_repo/net/minecraftforge/forge/1.16.5-36.1.0_mapped_snapshot_20201028-1.16.3/forge-1.16.5-36.1.0_mapped_snapshot_20201028-1.16.3-recomp.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
@@ -92,7 +97,7 @@
 	</classpathentry>
 	<classpathentry sourcepath="C:/Users/Elias/.mcreator/gradle/caches/modules-2/files-2.1/cpw.mods/grossjava9hacks/1.3.0/fb7f80f1a8a81e1665f54f490cf945d68908da04/grossjava9hacks-1.3.0-sources.jar" kind="lib" path="C:/Users/Elias/.mcreator/gradle/caches/modules-2/files-2.1/cpw.mods/grossjava9hacks/1.3.0/1a922de964d0c19d864fbcba2678c1a1c4602c35/grossjava9hacks-1.3.0.jar">
 		<attributes>
-			<attribute name="gradle_used_by_scope" value="main,test"/>
+			<attribute name="gradle_used_by_scope" value=""/>
 		</attributes>
 	</classpathentry>
 	<classpathentry sourcepath="C:/Users/Elias/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/accesstransformers/3.0.1/be0d2b1ddf0fd6279ccce90200d51a8417c3ea2f/accesstransformers-3.0.1-sources.jar" kind="lib" path="C:/Users/Elias/.mcreator/gradle/caches/modules-2/files-2.1/net.minecraftforge/accesstransformers/3.0.1/6d23c1b9cb0607fddc38d09730796f68db96f546/accesstransformers-3.0.1.jar">
@@ -351,6 +356,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry sourcepath="C:/Users/Elias/.mcreator/gradle/caches/modules-2/files-2.1/com.google.code.findbugs/jsr305/3.0.2/b19b5927c2c25b6c70f093767041e641ae0b1b35/jsr305-3.0.2-sources.jar" kind="lib" path="C:/Users/Elias/.mcreator/gradle/caches/modules-2/files-2.1/com.google.code.findbugs/jsr305/3.0.2/25ea2e8b0c338a877313bd4672d3fe056ea78f0d/jsr305-3.0.2.jar">
+		<attributes>
+			<attribute name="gradle_used_by_scope" value="main,test"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry sourcepath="C:/Users/Elias/.mcreator/gradle/caches/modules-2/files-2.1/cpw.mods/grossjava9hacks/1.3.3/ecf89624be98b57b83cb2c6838be34fc1bfc0f5c/grossjava9hacks-1.3.3-sources.jar" kind="lib" path="C:/Users/Elias/.mcreator/gradle/caches/modules-2/files-2.1/cpw.mods/grossjava9hacks/1.3.3/e49222512ea6cabdd8b49761cef1d5a207b1f0d9/grossjava9hacks-1.3.3.jar">
 		<attributes>
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
