Reworked Compressor Animations

--- a/elements/Mercurybiome.mod.json
+++ b/elements/Mercurybiome.mod.json
@@ -45,8 +45,8 @@
     },
     "rainingPossibility": 0.0,
     "temperature": 1.6,
-    "baseHeight": 0.2,
-    "heightVariation": 0.30000000000000004,
+    "baseHeight": 1.0,
+    "heightVariation": 0.2,
     "biomeType": "WARM",
     "spawnBiome": false,
     "biomeWeight": 10,
