--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ buildscript {
         maven { url = 'https://maven.minecraftforge.net' }
         mavenCentral()
 	maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
-	maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
@@ -20,6 +19,11 @@ repositories {
     url = "https://modmaven.k-4u.nl/"
   }
 }
+	allprojects {
+		repositories {
+			maven { url 'https://jitpack.io' }
+		}
+	}
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 
@@ -69,7 +73,7 @@ dependencies {
   compileOnly fg.deobf("mezz.jei:jei-1.16.4:7.6.0.62:api")
   runtimeOnly fg.deobf("mezz.jei:jei-1.16.4:7.6.0.62")
     annotationProcessor 'org.spongepowered:mixin:0.8.2:processor'
-  implementation 'com.github.MrScautHD:Space-Bosstools:master'
+implementation 'com.github.MrScautHD:Space-Bosstools:1.16.5-5.2.1'
 }
 jar {
     manifest {
@@ -93,4 +97,3 @@ apply from: 'mcreator.gradle'
 mixin {
     add sourceSets.main, "boss_tools.refmap.json"
 }
-
