--- a/elements/MarsHillsBiome.mod.json
+++ b/elements/MarsHillsBiome.mod.json
@@ -46,7 +46,7 @@
     "rainingPossibility": 0.0,
     "temperature": 1.6,
     "baseHeight": 2.0,
-    "heightVariation": 0.02,
+    "heightVariation": 0.12000000000000001,
     "biomeType": "WARM",
     "spawnBiome": false,
     "biomeWeight": 0,
