Change Biome Generation high of Mars and Moon Generation, add Steel block to Becon base block , Fix Block Resistance, Fix Can not Brake Mars and Moon Sand with Hand

--- a/elements/MarsIceBiome.mod.json
+++ b/elements/MarsIceBiome.mod.json
@@ -41,11 +41,11 @@
     "particlesProbability": 1.4000000000000001,
     "biomeCategory": "ICY",
     "parent": {
-      "value": "mutated_ice_flats"
+      "value": "CUSTOM:MarsIceBiome"
     },
     "rainingPossibility": 0.0,
     "temperature": 1.6,
-    "baseHeight": 2.0,
+    "baseHeight": 0.1,
     "heightVariation": 0.12000000000000001,
     "biomeType": "ICY",
     "spawnBiome": false,
