Add Venus Hills, Add Venus Sandstone,mirror changes

--- a/elements/VenusHillsBiome.mod.json
+++ b/elements/VenusHillsBiome.mod.json
@@ -45,8 +45,8 @@
     },
     "rainingPossibility": 1.0,
     "temperature": 1.5,
-    "baseHeight": 0.2,
-    "heightVariation": 0.02,
+    "baseHeight": 0.30000000000000004,
+    "heightVariation": 0.42000000000000004,
     "biomeType": "WARM",
     "spawnBiome": false,
     "biomeWeight": 10,
