First Part of Custom Camera pos, Change Rocket Drop just when Entity Sneak

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -11,3 +11,5 @@ public-f net.minecraft.world.gen.feature.structure.Structure field_236384_t_ #LA
 public-f net.minecraft.world.gen.feature.structure.Structure field_236385_u_ #LAND_TRANSFORMING_STRUCTURES
 public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236191_b_ #DEFAULT_STRUCTURE_CONFIGS
 public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236193_d_ #DEFAULT_STRUCTURE_CONFIGS
+public net.minecraft.client.renderer.ActiveRenderInfo func_216782_a(DDD)V # move
+public net.minecraft.client.renderer.ActiveRenderInfo func_216779_a(D)D # getMaxZoom
