--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,7 +5,7 @@ license="Not specified"
 [[mods]]
 modId="boss_tools"
 version="5.4"
-displayName="Space-Bosstools"
+displayName="Space-BossTools"
 credits="MrScautHD"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/space-bosstools"
 logoFile="logo.png"
