Changed world gen

--- a/elements/Mercurybiome.mod.json
+++ b/elements/Mercurybiome.mod.json
@@ -4,7 +4,7 @@
   "definition": {
     "name": "Mercury Biome",
     "groundBlock": {
-      "value": "CUSTOM:Mercurystone"
+      "value": "CUSTOM:MrrcuryCobblestone"
     },
     "undergroundBlock": {
       "value": "CUSTOM:MrrcuryCobblestone"
