--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,12 @@
 buildscript {
     repositories {
         maven { url = 'https://maven.minecraftforge.net' }
+        maven { url = 'https://repo.spongepowered.org/maven' }
         mavenCentral()
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
+        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
     }
 }
 repositories {
@@ -24,6 +26,7 @@ repositories {
 }
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
+apply plugin: 'org.spongepowered.mixin'
 
 version = '1.0'
 group = 'com.yourname.modid'
@@ -41,6 +44,7 @@ minecraft {
 
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
+            arg "-mixin.config=boss_tools.mixin.json"
 
             mods {
                 examplemod {
@@ -54,6 +58,7 @@ minecraft {
 
             property 'forge.logging.markers', 'REGISTRIES'
             property 'forge.logging.console.level', 'debug'
+            arg "-mixin.config=boss_tools.mixin.json"
 
             mods {
                 examplemod {
@@ -70,6 +75,11 @@ dependencies {
   compileOnly fg.deobf("mezz.jei:jei-1.16.4:7.6.0.62:api")
   runtimeOnly fg.deobf("mezz.jei:jei-1.16.4:7.6.0.62")
 }
+
+mixin {
+    add sourceSets.main, "boss_tools.mixin-refmap.json"
+}
+
 jar {
     manifest {
         attributes([
@@ -80,6 +90,7 @@ jar {
                 "Implementation-Version": "${version}",
                 "Implementation-Vendor" :"MrScautHD",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "MixinConfigs" : "boss_tools.mixin.json"
         ])
     }
 }
