--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,10 @@ dependencies {
   compile fg.deobf("curse.maven:obfuscate-289380:3067472")
   compileOnly fg.deobf("mezz.jei:jei-1.16.4:7.6.0.62:api")
   runtimeOnly fg.deobf("mezz.jei:jei-1.16.4:7.6.0.62")
+  
+  // TConstruct
+  compile fg.deobf("curse.maven:mantle-74924:3439180")
+  compile fg.deobf("curse.maven:tinkers-construct-74072:3439200")
 }
 
 mixin {
