--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,12 @@ dependencies {
   
   //Hwyla
   compile fg.deobf("curse.maven:hwyla-253449:3033593")
+  
+  //Mekanism
+  compile fg.deobf("mekanism:Mekanism:${mekanism_version}")
+  runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:additions")
+  runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")
+  runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:tools")
 }
 
 mixin {
