--- a/build.gradle
+++ b/build.gradle
@@ -93,10 +93,10 @@ dependencies {
   compile fg.deobf("curse.maven:hwyla-253449:3033593")
   
   //Mekanism
-  compile fg.deobf("mekanism:Mekanism:${mekanism_version}")
-  runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:additions")
-  runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:generators")
-  runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:tools")
+  compile fg.deobf("mekanism:Mekanism:1.16.5-10.0.20.447")
+  runtimeOnly fg.deobf("mekanism:Mekanism:1.16.5-10.0.20.447:additions")
+  runtimeOnly fg.deobf("mekanism:Mekanism:1.16.5-10.0.20.447:generators")
+  runtimeOnly fg.deobf("mekanism:Mekanism:1.16.5-10.0.20.447:tools")
 }
 
 mixin {
