--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -13,3 +13,4 @@ public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_2361
 public-f net.minecraft.world.gen.settings.DimensionStructuresSettings field_236193_d_ #DEFAULT_STRUCTURE_CONFIGS
 public net.minecraft.client.renderer.ActiveRenderInfo func_216782_a(DDD)V # move
 public net.minecraft.client.renderer.ActiveRenderInfo func_216779_a(D)D # getMaxZoom
+public net.minecraft.entity.merchant.villager.VillagerEntity field_234542_bL_ # assignProfessionWhenSpawned
