--- a/src/main/resources/assets/boss_tools/models/block/rocket_launch_pad.json
+++ b/src/main/resources/assets/boss_tools/models/block/rocket_launch_pad.json
@@ -1,8 +1,8 @@
 {
-  "parent": "boss_tools:custom/launchpad",
+  "parent": "boss_tools:custom/launch_pad",
   "textures": {
-    "all": "boss_tools:blocks/launchpad",
-    "particle": "boss_tools:blocks/launchpad",
-    "1": "boss_tools:blocks/launchpad"
+    "all": "boss_tools:blocks/launch_pad",
+    "particle": "boss_tools:blocks/launch_pad",
+    "1": "boss_tools:blocks/launch_pad"
   }
 }
