--- a/src/main/resources/assets/boss_tools/models/custom/launch_pad_base.json
+++ b/src/main/resources/assets/boss_tools/models/custom/launch_pad_base.json
@@ -3,13 +3,13 @@
 	"parent": "launch_pad",
 	"texture_size": [32, 32],
 	"textures": {
-		"0": "launch_pad",
-		"particle": "launch_pad"
+		"0": "boss_tools:blocks/launch_pad",
+		"particle": "boss_tools:blocks/launch_pad"
 	},
 	"elements": [
 		{
 			"from": [0, 0, 0],
-			"to": [16, 2, 16],
+			"to": [16, 4, 16],
 			"faces": {
 				"north": {"uv": [0, 8, 8, 9], "texture": "#0"},
 				"east": {"uv": [0, 8, 8, 9], "texture": "#0"},
