--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,7 +4,7 @@ license="Not specified"
 
 [[mods]]
 modId="boss_tools"
-version="5.5"
+version="5.5e"
 displayName="Space-BossTools"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/space-bosstools"
 logoFile="logo.png"
